Disallow creation of points with similar name

--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -6,6 +6,7 @@ commands.click-to-suggest=Click to show this command in the chat
 errors.permissions.default=You have not enough permissions to do this
 errors.point.notfound=Point with name {0} does not exist
 errors.point.unknown=Unable to retrieve point info
+errors.point.similar=Point with similar name already exists
 errors.point.create=Unable to create point
 errors.point.delete=Unable to delete point
 errors.actions.executor=This command can be only executed by a {0}
