Disallow point names longer than 50 symbols

--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -9,4 +9,5 @@ errors.point.unknown=Unable to retrieve point info
 errors.point.similar=Point with similar name already exists
 errors.point.create=Unable to create point
 errors.point.delete=Unable to delete point
+errors.point.name.long=Point name mustn't be longer than {0} symbols
 errors.actions.executor=This command can be only executed by a {0}
