--- a/points-common/src/main/resources/lang/ru.properties
+++ b/points-common/src/main/resources/lang/ru.properties
@@ -4,8 +4,9 @@ point.view=Точка {0} находится на координатах {1} в 
 commands.usage=Использование: {0}
 commands.click-to-suggest=Нажмите, чтобы показать использование команды в чате
 errors.permissions.default=У Вас недостаточно прав, чтобы сделать это
-errors.point.notfound=Точка "{0}" не существует
+errors.point.notfound=Точка {0} не существует
 errors.point.unknown=Не удалось получить данные о точке
 errors.point.similar=Точка с похожим названием уже существует
 errors.point.create=Не удалось создать точку
 errors.point.delete=Не удалось удалить точку
+errors.point.name.long=Название точки не должно быть длинее {0} символов
