--- a/points-common/src/main/resources/lang/ru.properties
+++ b/points-common/src/main/resources/lang/ru.properties
@@ -3,6 +3,8 @@ point.delete.success=Точка {0} успешно удалена
 point.view=Точка {0} находится на координатах {1} в мире {2}
 point.hidden.on=Точка {0} теперь не видна на карте мира
 point.hidden.off=Точка {0} теперь видна на карте мира
+point.private.on=Точка {0} теперь не доступна другим игрокам
+point.private.off=Точка {0} теперь доступна другим игрокам
 commands.usage=Использование: {0}
 commands.click-to-suggest=Нажмите, чтобы показать использование команды в чате
 errors.permissions.default=У Вас недостаточно прав, чтобы сделать это
