--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -3,6 +3,8 @@ point.delete.success=Point {0} has been deleted
 point.view=Point {0} is located at {1} in the {2}
 point.hidden.on=Point {0} is no longer visible on the world map
 point.hidden.off=Point {0} is now visible on the world map
+point.private.on=Point {0} is no longer available to other players
+point.private.off=Point {0} is now can be viewed by other players
 commands.usage=Usage: {0}
 commands.click-to-suggest=Click to show this command in the chat
 errors.permissions.default=You have not enough permissions to do this
