Add buttons to easily modify point's settings after it is created

--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -1,4 +1,4 @@
-point.create.success=Point {0} has been created
+point.create.success=Point {0} has been created \n {1} {2}
 point.delete.success=Point {0} has been deleted
 point.view=Point {0} is located at {1} in the {2}
 point.hidden.on=Point {0} is no longer visible on the world map
@@ -16,3 +16,7 @@ errors.point.create=Unable to create point
 errors.point.delete=Unable to delete point
 errors.point.name.long=Point name mustn't be longer than {0} symbols
 errors.actions.executor=This command can be only executed by a {0}
+interactions.make-private=Make private
+interactions.make-visible=Show on map
+hint.private=This will make your point available only for you, so other players will not be able to see its coordinates
+hint.visible=This will create marker for your point on the online map if the server administrator has configured it
