--- a/points-common/src/main/resources/lang/ru.properties
+++ b/points-common/src/main/resources/lang/ru.properties
@@ -1,4 +1,4 @@
-point.create.success=Точка {0} успешно создана
+point.create.success=Точка {0} успешно создана \n {1} {2}
 point.delete.success=Точка {0} успешно удалена
 point.view=Точка {0} находится на координатах {1} в мире {2}
 point.hidden.on=Точка {0} теперь не видна на карте мира
@@ -15,3 +15,7 @@ errors.point.update=Не удалось обновить точку
 errors.point.create=Не удалось создать точку
 errors.point.delete=Не удалось удалить точку
 errors.point.name.long=Название точки не должно быть длинее {0} символов
+interactions.make-private=Сделать приватной
+interactions.make-visible=Отображать на карте
+hint.private=Точка станет доступной только Вам, другие игроки не смогут увидеть её координаты
+hint.visible=Точка будет отображаться на онлайн-карте сервера
