List of points nearby to player

--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -5,6 +5,9 @@ point.hidden.on=Point {0} is no longer visible on the world map
 point.hidden.off=Point {0} is now visible on the world map
 point.private.on=Point {0} is no longer available to other players
 point.private.off=Point {0} is now can be viewed by other players
+point.no-nearby=There are no any points near you
+point.nearby=There are {0} points near you:
+point.nearby.entry= • {0} ({1})
 commands.usage=Usage: {0}
 commands.click-to-suggest=Click to show this command in the chat
 errors.permissions.default=You have not enough permissions to do this
