Show full point info when hovering on its name

--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -8,6 +8,10 @@ point.private.off=Point {0} is now can be viewed by other players
 point.no-nearby=There are no any points near you
 point.nearby=There are {0} points near you:
 point.nearby.entry= • {0} ({1})
+point.info.name=Name: {0}
+point.info.owner=Owner: {0}
+point.info.location=Location: {0} in {1}
+point.info.created=Creation time: {0}
 commands.usage=Usage: {0}
 commands.click-to-suggest=Click to show this command in the chat
 errors.permissions.default=You have not enough permissions to do this
