Show slug in point info

--- a/points-common/src/main/resources/lang/en.properties
+++ b/points-common/src/main/resources/lang/en.properties
@@ -9,6 +9,7 @@ point.no-nearby=There are no any points near you
 point.nearby=There are {0} points near you:
 point.nearby.entry= • {0} ({1})
 point.info.name=Name: {0}
+point.info.slug=Slug: {0}
 point.info.owner=Owner: {0}
 point.info.location=Location: {0} in the {1}
 point.info.created=Creation time: {0}
