--- a/points-common/src/main/resources/lang/ru.properties
+++ b/points-common/src/main/resources/lang/ru.properties
@@ -8,6 +8,7 @@ point.private.off=Точка {0} теперь доступна другим иг
 point.no-nearby=Рядом с Вами нет никаких точек
 point.nearby=Рядом с Вами есть {0} точек:
 point.info.name=Название: {0}
+point.info.slug=Идентификатор: {0}
 point.info.owner=Владелец: {0}
 point.info.location=Местоположение: {0} в мире {1}
 point.info.created=Время создания: {0}
